--- a/behat.yml
+++ b/behat.yml
@@ -12,3 +12,11 @@ default:
       output_path: "%paths.base%/reports/junit"
     html:
       output_path: "%paths.base%/reports/html"
+  extensions:
+    emuse\BehatHTMLFormatter\BehatHTMLFormatterExtension:
+      name: html
+      renderer: Twig,Behat2
+      file_name: index
+      print_args: true
+      print_outp: true
+      print_loop: true
