--- a/behat.yml
+++ b/behat.yml
@@ -20,3 +20,4 @@ default:
       print_args: true
       print_outp: true
       print_loop: true
+      output_path: '%paths.base%/reports/html'  # ¡Esta línea es crucial!
