--- a/.github/workflows/bdd-tests.yml
+++ b/.github/workflows/bdd-tests.yml
@@ -31,9 +31,9 @@ jobs:
       # Paso 4: Ejecutar pruebas BDD
       - name: Run Behat tests
         run: |
-          Markdown2Video/vendor/bin/behat --format=pretty --format=junit --out=reports/junit --format=html --out=reports/html
+          Markdown2Video/vendor/bin/behat --format=pretty --format=junit --out=reports/junit --format=html --out=reports/html --profile=ci
 
-      # Paso 5: Guardarreportes como artefacto
+      # Paso 5: Guardar reportes como artefacto
       - name: Upload test reports artifact
         uses: actions/upload-artifact@v4
         with:
