fix: Add no-sandbox and full dependencies for Chrome

--- a/Markdown2Video/.ebextensions/01_install_chrome.config
+++ b/Markdown2Video/.ebextensions/01_install_chrome.config
@@ -1,14 +1,14 @@
-files:
-  /tmp/google-chrome-stable_current_x86_64.rpm:
-    mode: "000644"
-    owner: root
-    group: root
-    source: https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
-
 commands:
-  01_install_chrome:
+  01_install_dependencies:
     command: |
-      dnf install -y /tmp/google-chrome-stable_current_x86_64.rpm
-      rm /tmp/google-chrome-stable_current_x86_64.rpm
+      dnf install -y alsa-lib.x86_64 atk.x86_64 cups-libs.x86_64 gtk3.x86_64 ipa-gothic-fonts libXcomposite.x86_64 libXcursor.x86_64 libXdamage.x86_64 libXext.x86_64 libXi.x86_64 libXrandr.x86_64 libXScrnSaver.x86_64 libXtst.x86_64 pango.x86_64 xorg-x11-fonts-100dpi xorg-x11-fonts-75dpi xorg-x11-fonts-cyrillic xorg-x11-fonts-misc xorg-x11-fonts-Type1 xorg-x11-server-Xvfb
     cwd: /
+    ignoreErrors: true
+
+  02_install_chrome:
+    command: |
+      wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+      dnf install -y ./google-chrome-stable_current_x86_64.rpm
+      rm ./google-chrome-stable_current_x86_64.rpm
+    cwd: /tmp
     ignoreErrors: false
