refactor: Simplify chrome install script

--- a/Markdown2Video/.ebextensions/01_install_chrome.config
+++ b/Markdown2Video/.ebextensions/01_install_chrome.config
@@ -1,7 +1,8 @@
 container_commands:
-  01_create_cache_dir:
-    command: "mkdir -p /home/webapp/.cache/puppeteer && chown -R webapp:webapp /home/webapp/.cache"
-    leader_only: true
-  02_install_puppeteer_chrome:
-    command: "sudo -u webapp PUPPETEER_CACHE_DIR=/home/webapp/.cache/puppeteer npx puppeteer browsers install chrome-headless-shell"
+  01_install_puppeteer_chrome:
+    command: |
+      export PUPPETEER_CACHE_DIR="/home/webapp/.cache/puppeteer"
+      mkdir -p $PUPPETEER_CACHE_DIR
+      npx puppeteer browsers install chrome-headless-shell
+      chown -R webapp:webapp /home/webapp/.cache
     leader_only: true
