--- a/.github/workflows/release_version.yml
+++ b/.github/workflows/release_version.yml
@@ -70,8 +70,8 @@ jobs:
       with:
         tag: ${{ env.NAME }}
         name: "Release ${{ env.NAME }}"
-        artifact: release/*.zip
-        token: ${{ secrets.GH_TOKEN }}
+        artifacts: Markdown2Video/release/*.zip
+        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Set up AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
